# Delivery

./: .gitignore  README.md  api_responce_example.txt  cli.py  docker-compose.yaml  dockerfile  input.txt  input_json.txt  input_jsons.txt  makefile  maps_api_request_example.txt  pyproject.toml  responce.py  settings.py  testing_testing.py  update_data.txt
app/: app.py  config.py  exceptions.py  main.py
app/api/: route_router.py  routes.py
app/models/: delivery_point.py  item.py  route.py  warehouse.py
app/schemas/: request_schemas.py  response_schemas.py
app/services/: algorithm.py  gis_request.py  gis_responce.py  manage_data.py  maps_api.py  route_calculator.py
app/tests/: test_calculate_route.py  test_main.py
checkpoint_1/: роли участников проекта.txt  структура приложения логистика.txt  схема проекта
checkpoint_1/PythonApplication1/: app.sln
checkpoint_1/PythonApplication1/PythonApplication1/: PythonApplication1.pyproj
checkpoint_1/PythonApplication1/PythonApplication1/app/: main.py
checkpoint_1/PythonApplication1/PythonApplication1/env1/: pyvenv.cfg
checkpoint_1/PythonApplication1/PythonApplication1/models/: coordinate.py
checkpoint_1/PythonApplication1/PythonApplication1/routers/: route_router.py
checkpoint_1/PythonApplication1/PythonApplication1/schemas/: request_schemas.py  response_schemas.py
checkpoint_1/PythonApplication1/PythonApplication1/services/: maps_api.py  route_calculator.py
checkpoint_1/PythonApplication1/PythonApplication1/tests/: test_main.py  (+1 more)
tests/: test_gis_request.py  test_gis_responce.py  test_manage_data.py
(+2 files in other folders)
